gcc/testsuite/g++.old-deja/g++.brendan/err-msg5.C
// { dg-do assemble  }
// GROUPS passed error-messages
class foo {};
~foo () {}// { dg-error "" }  destructors must be member functions.*
